Redesign the architecture, add cloud support