@@ -1,26 +1,13 @@
 #!/bin/bash
 
 echo "Setting up the script variables..."
-aemDir="/opt/aem/author"
-slingPropsFile="$aemDir/crx-quickstart/conf/sling.properties"
-runModes="author,nosamplecontent,local"
-aemPort="4502"
-debugPort="8888"
-passwordFile="$aemDir/passwordfile.properties"
-adminPassword=$(grep "admin.password" "$passwordFile" | head -n 1 | cut -d '=' -f 2)
-# The exact number of bundles in expectedBundlesStatusAfterFirstAEMStart
-# depends on the exact AEM setup. Here are example values for some of those setups:
-#  577 bundles active - clean AEM 6.5.0 + nosamplecontent
-#  606 bundles active - clean AEM 6.5.0 + 6.5.16 Service Pack + nosamplecontent
-#  719 bundles active - clean AEM 6.5.0 + 6.5.16 Service Pack + 6.0.914 AEM Forms Addon + nosamplecontent
-expectedBundlesStatusAfterFirstAEMStart="719 bundles active"
-# The exact number of bundles in expectedBundlesStatusAfterSecondAndSubsequentAEMStart
-# depends on the exact AEM setup. Here are example values for some of those setups:
-#  577 bundles active - clean AEM 6.5.0 + nosamplecontent
-#  725 bundles active - clean AEM 6.5.0 + 6.5.16 Service Pack + 6.0.914 AEM Forms Addon + nosamplecontent
-expectedBundlesStatusAfterSecondAndSubsequentAEMStart="725 bundles active"
-actualBundlesStatus=""
-isResponseOK=false
+SLING_PROPS_FILE="$AEM_DIR/crx-quickstart/conf/sling.properties"
+PASSWORD_FILE="$AEM_DIR/passwordfile.properties"
+ADMIN_PASSWORD=$(grep "admin.password" "$PASSWORD_FILE" | head -n 1 | cut -d '=' -f 2)
+EXPECTED_BUNDLES_STATUS_AFTER_FIRST_START="$NUM_OF_EXPECTED_BUNDLES_AFTER_FIRST_START bundles active"
+EXPECTED_BUNDLES_STATUS_AFTER_SECOND_AND_SUBSEQUENT_STARTS="$NUM_OF_EXPECTED_BUNDLES_AFTER_SECOND_AND_SUBSEQUENT_STARTS bundles active"
+ACTUAL_BUNDLES_STATUS=""
+IS_RESPONSE_OK=false
 
 ###################################
 #                                 #
@@ -34,38 +21,27 @@ updateSlingPropsForForms () {
   # The following adjustments are required for AEM Forms addon work correctly.
   # Although the documentation requires it only for Windows, but for UNIX that is also the case
   # (https://experienceleague.adobe.com/docs/experience-manager-learn/forms/adaptive-forms/installing-aem-form-on-windows-tutorial-use.html?lang=en):
-  echo "sling.bootdelegation.class.com.rsa.jsafe.provider.JsafeJCE=com.rsa.*" >> "$slingPropsFile"
-  echo "sling.bootdelegation.class.org.bouncycastle.jce.provider.BouncyCastleProvider=org.bouncycastle.*" >> "$slingPropsFile"
+  echo "sling.bootdelegation.class.com.rsa.jsafe.provider.JsafeJCE=com.rsa.*" >> "$SLING_PROPS_FILE"
+  echo "sling.bootdelegation.class.org.bouncycastle.jce.provider.BouncyCastleProvider=org.bouncycastle.*" >> "$SLING_PROPS_FILE"
 }
 
 updateSlingPropsForSQL () {
   echo ""
   echo "Updating Sling properties related to SQL..."
   # We need it to have SQL on the class path:
-  sed -i 's/org.osgi.framework.system.packages.extra=/&java.sql,/' "$slingPropsFile"
+  sed -i 's/org.osgi.framework.system.packages.extra=/&java.sql,/' "$SLING_PROPS_FILE"
 }
 
 startAEMInBackground () {
   echo ""
   echo "AEM will be started in the background..."
-  java \
-      -Xmx4096M \
-      -Djava.awt.headless=true \
-      -XX:+UseParallelGC --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED -Dnashorn.args=--no-deprecation-warning \
-      -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address="$debugPort" \
-      -Dadmin.password.file="$aemDir/passwordfile.properties" \
-      -Dsling.run.modes="$runModes" \
-      -jar "$aemDir/aem-quickstart-6.5.0.jar" \
-      -nointeractive \
-      -port "$aemPort" \
-      -nofork \
-      -nobrowser &
+  ./aem-starter.sh &
 }
 
 updateActualBundlesStatus () {
   echo ""
   echo "Updating actual bundles status..."
-  actualBundlesStatus=$(curl --verbose --user admin:"$adminPassword" "localhost:$aemPort/system/console/bundles.json" | jq --raw-output ".status")
+  ACTUAL_BUNDLES_STATUS=$(curl --verbose --user admin:"$ADMIN_PASSWORD" "localhost:$AEM_PORT/system/console/bundles.json" | jq --raw-output ".status")
 }
 
 waitUntilBundlesStatusMatch () {
@@ -76,10 +52,10 @@ waitUntilBundlesStatusMatch () {
     date
     echo ""
     echo "Latest logs:"
-    tail -n 50 "$aemDir/crx-quickstart/logs/error.log"
-    echo "Actual bundles status: $actualBundlesStatus"
+    tail -n 30 "$AEM_DIR/crx-quickstart/logs/error.log"
+    echo "Actual bundles status: $ACTUAL_BUNDLES_STATUS"
     echo "Expected bundles status: $expectedBundlesStatus"
-    if [[ "$actualBundlesStatus" =~ .*"$expectedBundlesStatus".* ]]
+    if [[ "$ACTUAL_BUNDLES_STATUS" =~ .*"$expectedBundlesStatus".* ]]
       then
         isInitializationFinalized=true
         echo "Number of bundles matched"
@@ -88,19 +64,25 @@ waitUntilBundlesStatusMatch () {
         sleep 15
     fi
   done
-  actualBundlesStatus=""
+  ACTUAL_BUNDLES_STATUS=""
   isInitializationFinalized=false
+}
+
+enableCRX () {
+  echo ""
+  echo "Enabling CRX DE..."
+  curl --verbose --user admin:"$ADMIN_PASSWORD" -F "jcr:primaryType=sling:OsgiConfig" -F "alias=/crx/server" -F "dav.create-absolute-uri=true" -F "dav.create-absolute-uri@TypeHint=Boolean" "http://localhost:$AEM_PORT/apps/system/config/org.apache.sling.jcr.davex.impl.servlets.SlingDavExServlet"
 }
 
 killAEM () {
   echo "AEM process will be terminated..."
-  fuser --namespace tcp --kill "$aemPort"
+  fuser --namespace tcp --kill "$AEM_PORT"
   sleep 5
 }
 
 setupCryptoKeys () {
   echo "Setting crypto keys..."
-  bundlesDir="$aemDir/crx-quickstart/launchpad/felix"
+  bundlesDir="$AEM_DIR/crx-quickstart/launchpad/felix"
   # Iterate over all direct subdirectories
   for bundleDir in "$bundlesDir"/*; do
     # Check if it is a directory:
@@ -121,7 +103,7 @@ setupCryptoKeys () {
   done
 
   targetCryptoData="$pathToGraniteCryptoBundle/data"
-  sourceCryptoData="$aemDir/data"
+  sourceCryptoData="$AEM_DIR/data"
 
   if [[ -d "$sourceCryptoData" ]]; then
     echo "Removing the target crypto data: $targetCryptoData"
@@ -134,20 +116,20 @@ setupCryptoKeys () {
 setPublishReplicationAgentPartOne () {
   echo ""
   echo "Setting up a publish replication agent, part 1 of 2..."
-  curlOutput=$(curl --verbose --user admin:"$adminPassword" \
+  curlOutput=$(curl --verbose --user admin:"$ADMIN_PASSWORD" \
       -F "enabled=true" \
       -F "transportPassword=admin" \
       -F "transportUri=http://localhost:4503/bin/receive?sling:authRequestLogin=1" \
       -F "transportUser=admin" \
-      "http://localhost:$aemPort/etc/replication/agents.author/publish/jcr:content")
+      "http://localhost:$AEM_PORT/etc/replication/agents.author/publish/jcr:content")
   echo "$curlOutput"
   if echo "$curlOutput" | grep -iq "Content modified"
    then
      echo "Response is OK"
-     isResponseOK=true
+     IS_RESPONSE_OK=true
   else
      echo "Response is not OK"
-     isResponseOK=false
+     IS_RESPONSE_OK=false
   fi
   sleep 5
 }
@@ -155,17 +137,17 @@ setPublishReplicationAgentPartOne () {
 setPublishReplicationAgentPartTwo () {
   echo ""
   echo "Setting up a publish replication agent, part 2 of 2..."
-  curlOutput=$(curl --verbose --user admin:"$adminPassword" \
+  curlOutput=$(curl --verbose --user admin:"$ADMIN_PASSWORD" \
       -F ":operation=delete" \
-      "http://localhost:$aemPort/etc/replication/agents.author/publish/jcr:content/userId")
+      "http://localhost:$AEM_PORT/etc/replication/agents.author/publish/jcr:content/userId")
   echo "$curlOutput"
   if echo "$curlOutput" | grep -iq "Content modified"
    then
      echo "Response is OK"
-     isResponseOK=true
+     IS_RESPONSE_OK=true
   else
      echo "Response is not OK"
-     isResponseOK=false
+     IS_RESPONSE_OK=false
   fi
   sleep 5
 }
@@ -173,18 +155,18 @@ setPublishReplicationAgentPartTwo () {
 setDispatcherReplicationAgent () {
   echo ""
   echo "Setting up a dispatcher replication agent..."
-  curlOutput=$(curl --verbose --user admin:"$adminPassword" \
+  curlOutput=$(curl --verbose --user admin:"$ADMIN_PASSWORD" \
       -F "transportUri=http://localhost:80/dispatcher/invalidate.cache" \
       -F "enabled=true" \
-      "http://localhost:$aemPort/etc/replication/agents.author/flush/jcr:content")
+      "http://localhost:$AEM_PORT/etc/replication/agents.author/flush/jcr:content")
   echo "$curlOutput"
   if echo "$curlOutput" | grep -iq "Content modified"
    then
      echo "Response is OK"
-     isResponseOK=true
+     IS_RESPONSE_OK=true
   else
      echo "Response is not OK"
-     isResponseOK=false
+     IS_RESPONSE_OK=false
   fi
   sleep 5
 }
@@ -192,18 +174,18 @@ setDispatcherReplicationAgent () {
 setAllReplicationAgents () {
   echo ""
   echo "Setting up all replication agents..."
-  isResponseOK=false
-  while [ $isResponseOK = false ]; do
+  IS_RESPONSE_OK=false
+  while [ $IS_RESPONSE_OK = false ]; do
     setPublishReplicationAgentPartOne
   done
 
-  isResponseOK=false
-  while [ $isResponseOK = false ]; do
+  IS_RESPONSE_OK=false
+  while [ $IS_RESPONSE_OK = false ]; do
     setPublishReplicationAgentPartTwo
   done
 
-  isResponseOK=false
-  while [ $isResponseOK = false ]; do
+  IS_RESPONSE_OK=false
+  while [ $IS_RESPONSE_OK = false ]; do
     setDispatcherReplicationAgent
   done
 }
@@ -217,7 +199,8 @@ setAllReplicationAgents () {
 updateSlingPropsForForms
 
 startAEMInBackground
-waitUntilBundlesStatusMatch "$expectedBundlesStatusAfterFirstAEMStart"
+waitUntilBundlesStatusMatch "$EXPECTED_BUNDLES_STATUS_AFTER_FIRST_START"
+enableCRX
 # Without this sleep installation of some packages might not be successful:
 echo "Sleeping for 60 seconds to let AEM be fully initialized..."
 sleep 60
@@ -226,10 +209,12 @@ killAEM
 setupCryptoKeys
 updateSlingPropsForSQL
 
-startAEMInBackground
-waitUntilBundlesStatusMatch "$expectedBundlesStatusAfterSecondAndSubsequentAEMStart"
-setAllReplicationAgents
-# Without this sleep installation of some packages might not be successful:
-echo "Sleeping for 30 seconds to let AEM be fully initialized..."
-sleep 30
-killAEM
+if [[ "$RUN_MODES" == *"author"* ]]; then
+  startAEMInBackground
+  waitUntilBundlesStatusMatch "$EXPECTED_BUNDLES_STATUS_AFTER_SECOND_AND_SUBSEQUENT_STARTS"
+  setAllReplicationAgents
+  # Without this sleep installation of some packages might not be successful:
+  echo "Sleeping for 30 seconds to let AEM be fully initialized..."
+  sleep 30
+  killAEM
+fi
